# xml_parse_project

./: CMakeLists.txt  README.md  lib.xml  main.cpp  pugi.xml  tiny.xml
